--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,18 @@
 </head>
 <body>
    <main>
-
+    <h1>IFBA AUTOMAÇÃO</h1>
+    <a href="empresa.html">[A EMPRESA]</a>
+    <a href="servicos.html">[SERVIÇOS]</a>
+    <a href="contato.html">[CONTATO]</a>
+    <hr>
+    <h2>Contato</h2>
+    <a href="tel:+55751111111">Numero</a>
+    <a href="mailto: autoifba@gmail.com">Email</a>
+    <hr>
+    <h2>Nosso endereço: </h2>
+    <p> R. Emídio dos Santos, s/n - Barbalho, Salvador - BA, 40301-015</p>
+    <hr>
    </main> 
    <footer>
     <p align="center">
