--- a/servicos.html
+++ b/servicos.html
@@ -13,7 +13,20 @@
         <a href="contato.html">[CONTATO]</a>
         <hr>
         <h1>serviços</h1>
+        <a href= "#desenvolv">[Desenvolvimento]</a> <a href="#mark">[Marketing]</a> <a href="#hosp">[Hospedagem]</a>
+       
+
+        <h3 id = "desenvolv">Desenvolvimento</h3>
+        <p>A AUTO IFBA visa fornecer serviços de automação para pequenas e média empresas em feira de santana</p>
+
+        <h3 id = "mark"> marketing</h3>
+        <p> Marketing realizado pela HP Media feira de santana</p>
+
+        <h3 id = "hosp"> Hospedagem</h3>
+        <p>Xxxx xxxx xxxx xxxx xxxx xxxx xxxx xxx xxxx</p>
+
     </main>
+    <hr>
     <footer>
         <p align="center">
             <b>TODOS OS DIREITOS RESERVADOS AO IFBA 2024.</b> 
